@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id("java")
     id 'org.openjfx.javafxplugin' version '0.0.9'
 }
@@ -23,6 +24,21 @@ javafx {
 java {
     modularity.inferModulePath.set(true)
 }
+
+application {
+    // Define the main class for the application.
+    mainClass = 'uncaptcha.Uncaptcha'
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+}
+
 
 tasks.test {
     useJUnitPlatform()
